partial completion of item refactor on level GameObject